...
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/backArrow5"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/left_arrow"
        android:onClick="backButton"
...
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/sofia_regular"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        android:background="@drawable/top_page_red_curved"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/historyTopBox1" />

    <Button
        android:id="@+id/CountinueButton"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/profile_page_all_curved_corners_red"
        android:backgroundTint="@color/red_ec"
        android:fontFamily="@font/sofia_regular"
        android:foreground="@drawable/ripple_grayc1c1"
        android:text="Add to Cart"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/red_ec"


        app:layout_constraintEnd_toEndOf="@+id/MenuWhiteBox"
...
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/MenuRedBox"
        app:layout_constraintStart_toStartOf="@+id/MenuRedBox"
        app:layout_constraintTop_toBottomOf="@+id/cvLayout" />

    <RadioGroup
        android:id="@+id/SizeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/MenuRedBox"
        app:layout_constraintStart_toStartOf="@+id/MenuRedBox"
...
            android:layout_weight="1"
            android:fontFamily="@font/sofia_regular"
            android:text="Small"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:text="@string/medium"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="94dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Large"
            android:textColor="@color/white" />
    </RadioGroup>

    <TextView
        android:id="@+id/DrinkTypeHeader"
        android:layout_width="154dp"
...
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/MenuRedBox"
        app:layout_constraintStart_toStartOf="@+id/MenuRedBox"
        app:layout_constraintTop_toBottomOf="@+id/SizeRadioGroup" />

    <RadioGroup
        android:id="@+id/TypeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/MenuRedBox"
        app:layout_constraintStart_toStartOf="@+id/MenuRedBox"
        app:layout_constraintTop_toBottomOf="@+id/DrinkTypeHeader">
...
            android:fontFamily="@font/sofia_regular"
            android:text="@string/hot"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sofia_regular"
            android:text="Iced"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

    </RadioGroup>

    <Button
...
