<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homePageButton"
        android:icon="@drawable/home_icon"
        android:title="Home"/>

    <item
        android:id="@+id/payPageButton"
        android:icon="@drawable/bag"
        android:title="Cart"/>

    <item
        android:id="@+id/orderPageButton"
        android:icon="@drawable/order_icon"
        android:title="Menu"/>

    <item
        android:id="@+id/accountPageButton"
        android:icon="@drawable/account_icon"
        android:title="Account" />

</menu>
